--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
    <title>Document</title>
 </head>
 <body>
-   
+<h2>Sample Table</h2>
+    <table border="1">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>25</td>
+        </tr>
+        <tr>
+            <td>Jane</td>
+            <td>Smith</td>
+            <td>30</td>
+        </tr>
+    </table>   
 </body>
 </html>
