--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
    <title>Document</title>
 </head>
 <body>
+      <header>
+      <nav>
+         <ul>
+            <li><a href=""></a>1</li>
+            <li><a href=""></a>2</li>
+            <li><a href=""></a>3</li>
+         </ul>
+      </nav>
+   </header>
 
     <h2>Contact Form</h2>
     <form action="/submit_form" method="post">
