--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
    <title>Document</title>
 </head>
 <body>
-
+   
+    <div class="product">
+        <img src="product-image.jpg" alt="Product Image">
+        <h2>Product Name</h2>
+        <p>Product description goes here. It provides details about the product features and benefits.</p>
+        <div class="price">$19.99</div>
+    </div>
+   
     <h2>Contact Form</h2>
     <form action="/submit_form" method="post">
         <label for="fname">First Name:</label><br>
