here is good b&w color with good look

--- a/index.html
+++ b/index.html
@@ -1,55 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <header id="home">
+        <nav>
+            <h1 class="logo">My Portfolio</h1>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><button id="dark-mode-toggle">🌙</button></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <a href="#home" class="nav-link">Home</a>
-    <a href="#about" class="nav-link">About</a>
-    <a href="#projects" class="nav-link">Projects</a>
-    <a href="#contact" class="nav-link">Contact</a>
-  </nav>
+    <!-- Home Section -->
+    <section class="hero">
+        <div class="intro">
+            <h2>Hello, I'm a Web Developer</h2>
+            <p>Passionate about creating stunning web experiences.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </section>
 
-  <!-- Hero Section -->
-  <section id="home" class="section hero">
-    <div class="hero-content">
-      <h1 class="hero-title">Welcome to My Portfolio</h1>
-      <p class="hero-subtitle">A showcase of my work and projects</p>
-    </div>
-  </section>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-cards">
+            <div class="project-card">
+                <img src="placeholder.jpg" alt="Project Image">
+                <h3>Project Title</h3>
+                <p>Brief description of the project and technologies used.</p>
+                <a href="#" class="btn">Live Demo</a>
+                <a href="#" class="btn">GitHub</a>
+            </div>
+            <!-- Add more project cards as needed -->
+        </div>
+    </section>
 
-  <!-- About Section -->
-  <section id="about" class="section about">
-    <h2>About Me</h2>
-    <p>This is a placeholder text for the about section. Describe yourself and your skills here.</p>
-  </section>
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>My Skills</h2>
+        <ul class="skills-list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <!-- Add more skills as needed -->
+        </ul>
+    </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="section projects">
-    <h2>My Projects</h2>
-    <div class="project-gallery">
-      <div class="project-card">
-        <img src="https://via.placeholder.com/300" alt="Project Image">
-        <h3>Project Title</h3>
-        <p>Project description goes here.</p>
-      </div>
-      <!-- Repeat project cards as needed -->
-    </div>
-  </section>
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Here's a brief background about myself, my journey, and interests in web development.</p>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section contact">
-    <h2>Contact Me</h2>
-    <p>Feel free to reach out through any of the platforms listed below.</p>
-    <button class="contact-button">Get in Touch</button>
-  </section>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form action="#" method="post">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit" class="btn">Send</button>
+        </form>
+        <div class="contact-info">
+            <a href="tel:+123456789"><i class="fas fa-phone"></i> +123 456 789</a>
+            <a href="mailto:email@example.com"><i class="fas fa-envelope"></i> email@example.com</a>
+        </div>
+    </section>
 
+    <script src="script.js"></script>
 </body>
 </html>
