--- a/index.html
+++ b/index.html
@@ -41,41 +41,68 @@
         <h2>My Projects</h2>
         <div class="project-cards">
             <div class="project-card">
-                <img src="placeholder.jpg" alt="Project Image">
-                <h3>Project Title</h3>
+                <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                <h3>Project Title 1</h3>
                 <p>Brief description of the project and technologies used.</p>
                 <a href="#" class="btn">Live Demo</a>
                 <a href="#" class="btn">GitHub</a>
             </div>
-            <!-- Add more project cards as needed -->
+            <div class="project-card">
+                <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                <h3>Project Title 2</h3>
+                <p>Brief description of the project and technologies used.</p>
+                <a href="#" class="btn">Live Demo</a>
+                <a href="#" class="btn">GitHub</a>
+            </div>
         </div>
     </section>
 
     <!-- Skills Section -->
     <section id="skills">
-        <h2>My Skills</h2>
+        <h2>Skills</h2>
         <ul class="skills-list">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
+            <li><i class="fab fa-html5"></i> HTML</li>
+            <li><i class="fab fa-css3-alt"></i> CSS</li>
+            <li><i class="fab fa-js-square"></i> JavaScript</li>
+            <li><i class="fab fa-react"></i> React</li>
+            <li><i class="fab fa-node-js"></i> Node.js</li>
             <!-- Add more skills as needed -->
         </ul>
     </section>
 
-    <!-- About Section -->
+    <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Here's a brief background about myself, my journey, and interests in web development.</p>
+        <div class="about-content">
+            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-picture">
+            <div class="bio">
+                <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
+                <p>When I'm not coding, I enjoy exploring new technologies, learning about UX design, and participating in hackathons.</p>
+            </div>
+        </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <form action="#" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit" class="btn">Send</button>
+        <form action="#" method="post" class="contact-form">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" placeholder="Your Name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="Your Email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone</label>
+                <input type="tel" name="phone" id="phone" placeholder="Your Phone Number">
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="5" placeholder="Your Message" required></textarea>
+            </div>
+            <button type="submit" class="btn">Send Message</button>
         </form>
         <div class="contact-info">
             <a href="tel:+123456789"><i class="fas fa-phone"></i> +123 456 789</a>
