added form border ,about contant styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Passionate about creating stunning web experiences.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="/test.html"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
@@ -56,7 +56,6 @@
             </div>
         </div>
     </section>
-
     <!-- Skills Section -->
     <section id="skills">
         <h2>Skills</h2>
@@ -74,7 +73,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-picture">
+            <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture">
             <div class="bio">
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
                 <p>When I'm not coding, I enjoy exploring new technologies, learning about UX design, and participating in hackathons.</p>
