--- a/index.html
+++ b/index.html
@@ -57,17 +57,30 @@
         </div>
     </section>
     <!-- Skills Section -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul class="skills-list">
-            <li><i class="fab fa-html5"></i> HTML</li>
-            <li><i class="fab fa-css3-alt"></i> CSS</li>
-            <li><i class="fab fa-js-square"></i> JavaScript</li>
-            <li><i class="fab fa-react"></i> React</li>
-            <li><i class="fab fa-node-js"></i> Node.js</li>
-            <!-- Add more skills as needed -->
-        </ul>
-    </section>
+   <section id="skills">
+    <h2>Skills</h2></br></br>
+    <h3>Frontend Skills</h3></br>
+    <ul class="skills-list">
+        <li><i class="fab fa-html5"></i> HTML(√)</li>
+        <li><i class="fab fa-css3-alt"></i> CSS(√)</li>
+        <li><i class="fab fa-js-square"></i> JavaSReact(Learning)</li>
+        <li><i class="fab fa-react"></i> React</li>
+        <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
+        <li><i class="fab fa-sass"></i> SASS</li>
+    </ul></br></br>
+    <h3>Backend Skills</h3></br>
+    <ul class="skills-list">
+        <li><i class="fab fa-node-js"></i> Node.js</li>
+        <li><i class="fas fa-database"></i> MongoDB</li>
+        <li><i class="fas fa-server"></i> Express.js</li>
+        <li><i class="fab fa-python"></i> Python</li>
+    </ul></br></br>
+    <h3>Tools</h3></br>
+    <ul class="skills-list">
+        <li><i class="fab fa-git-alt"></i> Git(√)</li>
+        <li><i class="fab fa-github"></i> GitHub(Learning)</li>
+    </ul>
+</section>
 
     <!-- About Me Section -->
     <section id="about">
@@ -104,8 +117,9 @@
             <button type="submit" class="btn">Send Message</button>
         </form>
         <div class="contact-info">
-            <a href="tel:+123456789"><i class="fas fa-phone"></i> +123 456 789</a>
-            <a href="mailto:email@example.com"><i class="fas fa-envelope"></i> email@example.com</a>
+            <a href="tel:+8801775-488063"><i class="fas fa-phone"></i> +8801775-48806</a>
+            <a href="tel:+8801603-27939"><i class="fas fa-phone"></i> +8801603-27939</a>
+            <a href="mailto:mdimamhasanihr@gmail.com"><i class="fas fa-envelope"></i> mdimamhasanihr@gmail.com</a>
         </div>
     </section>
 
