rm-dark,update about section by hover effet
solve bug home-scrool

--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 </head>
 <body>
     <!-- Navbar -->
-    <header id="home">
-        <nav>
-            <h1 class="logo">My Portfolio</h1>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><button id="dark-mode-toggle">🌙</button></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Home Section -->
-    <section class="hero">
-        <div class="intro">
-            <h2>Hello, I'm a Web Developer</h2>
-            <p>Passionate about creating stunning web experiences.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="/test.html"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-            </div>
+<header>
+    <nav>
+        <h1 class="logo">My Portfolio</h1>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+  
+<!-- Home Section -->
+<section id="home" class="hero">
+    <div class="intro">
+        <h2>Hello, I'm a Web Developer</h2>
+        <p>Passionate about creating stunning web experiences.</p>
+        <div class="social-links">
+               <a href="#"><i class="fab fa-linkedin"></i></a>
+               <a href="/test.html"><i class="fab fa-github"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+               <a href="#"><i class="fab <fa-fa></fa-fa>cebook"></i></a> <!-- Added Facebook icon -->
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Projects Section -->
     <section id="projects">
@@ -86,8 +86,10 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture">
+            <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture"
             <div class="bio">
+                <h1 style="color: #ffa500;">Imam Hasan</h1>
+
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
                 <p>When I'm not coding, I enjoy exploring new technologies, learning about UX design, and participating in hackathons.</p>
             </div>
