--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 </header>
-  
+
 <!-- Home Section -->
 <section id="home" class="hero">
     <div class="intro">
@@ -31,11 +31,10 @@
                <a href="#"><i class="fab fa-linkedin"></i></a>
                <a href="/test.html"><i class="fab fa-github"></i></a>
                <a href="#"><i class="fab fa-twitter"></i></a>
-               <a href="#"><i class="fab <fa-fa></fa-fa>cebook"></i></a> <!-- Added Facebook icon -->
+               <a href="#"><i class="fab fa-facebook"></i></a> <!-- Added Facebook icon -->
         </div>
     </div>
 </section>
-
     <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
