--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
             <a href="mailto:mdimamhasanihr@gmail.com"><i class="fas fa-envelope"></i> mdimamhasanihr@gmail.com</a>
         </div>
     </section>
+    <footer>
+    <p>&copy; 2024 Your Company Name</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
