--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
     </nav>
 </header>
 
-<!-- Home Section -->
-<section id="home" class="hero">
-    <div class="intro">
-        <h2>Hello, I'm a Web Developer</h2>
-        <p>Passionate about creating stunning web experiences.</p>
-        <div class="social-links">
-               <a href="#"><i class="fab fa-linkedin"></i></a>
-               <a href="/test.html"><i class="fab fa-github"></i></a>
-               <a href="#"><i class="fab fa-twitter"></i></a>
-               <a href="#"><i class="fab fa-facebook"></i></a> <!-- Added Facebook icon -->
+    <!-- Home Section -->
+    <section id="home" class="hero">
+        <div class="intro">
+            <h2 id="typing-text">Hello, I'm Imam Hasan, a Web Developer</h2>
+            <p>Passionate about creating stunning web experiences.</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://twitter.com" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://facebook.com" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+
     <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
