--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- Home Section -->
     <section id="home" class="hero">
         <div class="intro">
-            <h2 id="typing-text">Hello, I'm Imam Hasan, a Web Developer</h2>
+            <h2 id="typing-text">Hello! I'm Imam Hasan. What can i help with?</h2>
             <p>Passionate about creating stunning web experiences.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="/test.html" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://twitter.com" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 <a href="https://facebook.com" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             </div>
@@ -86,10 +86,10 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture"
+            <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture">
+            <h1 style="color: #ffa500;">Imam Hasan</h1>
             <div class="bio">
-                <h1 style="color: #ffa500;">Imam Hasan</h1>
-
+                
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
                 <p>When I'm not coding, I enjoy exploring new technologies, learning about UX design, and participating in hackathons.</p>
             </div>
@@ -125,7 +125,7 @@
         </div>
     </section>
     <footer>
-    <p>&copy; 2024 Your Company Name</p>
+    <p>&copy;2024 imamhasan</p>
     </footer>
 
     <script src="script.js"></script>
