--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
+<body onclick="createDot(event)">
     <!-- Navbar -->
 <header>
     <nav>
@@ -41,14 +41,14 @@
         <h2>My Projects</h2>
         <div class="project-cards">
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                <img src="/Images/frball.jpeg" alt="Project Image">
                 <h3>Project Title 1</h3>
                 <p>Brief description of the project and technologies used.</p>
                 <a href="#" class="btn">Live Demo</a>
                 <a href="#" class="btn">GitHub</a>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                <img src="/Images/frball2.jpeg" alt="Project Image">
                 <h3>Project Title 2</h3>
                 <p>Brief description of the project and technologies used.</p>
                 <a href="#" class="btn">Live Demo</a>
