--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
             </div>
         </div>
     </section>
+    <!-- Education section -->
+    <section id="education">
+  <h2>Education</h2></br>
+  <div class="education-cards">
+    <div class="card">
+      <h3>Master of Science in Computer Science</h3>
+      <p>XYZ University, 2022 - 2024</p>
+      <p>Graduated with Honors</p>
+    </div>
+    <div class="card">
+      <h3>Bachelor of Science in Information Technology</h3>
+      <p>ABC College, 2018 - 2022</p>
+      <p>Dean's List, 2020</p>
+    </div>
+  </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact">
