--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 <body onclick="createDot(event)">
     <!-- Navbar -->
-<header>
-    <nav>
-        <h1 class="logo">My Portfolio</h1>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <h1 class="logo">My Portfolio</h1>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Home Section -->
     <section id="home" class="hero">
         <div class="intro">
-            <h2 id="typing-text">Hello! I'm Imam Hasan. What can i help with?</h2>
+            <h2 id="typing-text">Hello! I'm Imam Hasan. What can I help with?</h2>
             <p>Passionate about creating stunning web experiences.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
@@ -38,7 +38,7 @@
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>My Projects</h2>
+        <h2>My Projects</h2></br>
         <div class="project-cards">
             <div class="project-card">
                 <img src="/Images/frball.jpeg" alt="Project Image">
@@ -56,61 +56,62 @@
             </div>
         </div>
     </section>
+
     <!-- Skills Section -->
-   <section id="skills">
-    <h2>Skills</h2></br></br>
-    <h3>Frontend Skills</h3></br>
-    <ul class="skills-list">
-        <li><i class="fab fa-html5"></i> HTML(√)</li>
-        <li><i class="fab fa-css3-alt"></i> CSS(√)</li>
-        <li><i class="fab fa-js-square"></i> JavaSReact(Learning)</li>
-        <li><i class="fab fa-react"></i> React</li>
-        <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
-        <li><i class="fab fa-sass"></i> SASS</li>
-    </ul></br></br>
-    <h3>Backend Skills</h3></br>
-    <ul class="skills-list">
-        <li><i class="fab fa-node-js"></i> Node.js</li>
-        <li><i class="fas fa-database"></i> MongoDB</li>
-        <li><i class="fas fa-server"></i> Express.js</li>
-        <li><i class="fab fa-python"></i> Python</li>
-    </ul></br></br>
-    <h3>Tools</h3></br>
-    <ul class="skills-list">
-        <li><i class="fab fa-git-alt"></i> Git(√)</li>
-        <li><i class="fab fa-github"></i> GitHub(Learning)</li>
-    </ul>
-</section>
+    <section id="skills">
+        <h2>Skills</h2><br><br>
+        <h3>Frontend Skills</h3><br>
+        <ul class="skills-list">
+            <li><i class="fab fa-html5"></i> HTML(√)</li>
+            <li><i class="fab fa-css3-alt"></i> CSS(√)</li>
+            <li><i class="fab fa-js-square"></i> JavaScript</li>
+            <li><i class="fab fa-react"></i> React</li>
+            <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
+            <li><i class="fab fa-sass"></i> SASS</li>
+        </ul><br><br>
+        <h3>Backend Skills</h3><br>
+        <ul class="skills-list">
+            <li><i class="fab fa-node-js"></i> Node.js</li>
+            <li><i class="fas fa-database"></i> MongoDB</li>
+            <li><i class="fas fa-server"></i> Express.js</li>
+            <li><i class="fab fa-python"></i> Python</li>
+        </ul><br><br>
+        <h3>Tools</h3><br>
+        <ul class="skills-list">
+            <li><i class="fab fa-git-alt"></i> Git(√)</li>
+            <li><i class="fab fa-github"></i> GitHub</li>
+        </ul>
+    </section>
 
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
             <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture">
-            <h1 style="color: #ffa500;">Imam Hasan</h1>
+            <h1 class="nameim">Imam Hasan</h1>
             <div class="bio">
-                
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
                 <p>When I'm not coding, I enjoy exploring new technologies, learning about UX design, and participating in hackathons.</p>
             </div>
         </div>
     </section>
-    <!-- Education section -->
+
+    <!-- Education Section -->
     <section id="education">
-  <h2>Education</h2></br>
-  <div class="education-cards">
-    <div class="card">
-      <h3>Master of Science in Computer Science</h3>
-      <p>XYZ University, 2022 - 2024</p>
-      <p>Graduated with Honors</p>
-    </div>
-    <div class="card">
-      <h3>Bachelor of Science in Information Technology</h3>
-      <p>ABC College, 2018 - 2022</p>
-      <p>Dean's List, 2020</p>
-    </div>
-  </div>
-</section>
+        <h2>Education</h2><br>
+        <div class="education-cards">
+            <div class="card">
+                <h3>Master of Science in Computer Science</h3>
+                <p>XYZ University, 2022 - 2024</p>
+                <p>Graduated with Honors</p>
+            </div>
+            <div class="card">
+                <h3>Bachelor of Science in Information Technology</h3>
+                <p>ABC College, 2018 - 2022</p>
+                <p>Dean's List, 2020</p>
+            </div>
+        </div>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -135,13 +136,14 @@
             <button type="submit" class="btn">Send Message</button>
         </form>
         <div class="contact-info">
-            <a href="tel:+8801775-488063"><i class="fas fa-phone"></i> +8801775-48806</a>
+            <a href="tel:+8801775-488063"><i class="fas fa-phone"></i> +8801775-488063</a>
             <a href="tel:+8801603-27939"><i class="fas fa-phone"></i> +8801603-27939</a>
             <a href="mailto:mdimamhasanihr@gmail.com"><i class="fas fa-envelope"></i> mdimamhasanihr@gmail.com</a>
         </div>
     </section>
+
     <footer>
-    <p>&copy;2024 imamhasan</p>
+        <p>&copy;2024 Imam Hasan</p>
     </footer>
 
     <script src="script.js"></script>
