--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
                 <a href="#" class="btn">Live Demo</a>
                 <a href="#" class="btn">GitHub</a>
             </div>
+             <div class="project-card">
+                <img src="/Images/frball.jpeg" alt="Project Image">
+                <h3>Project Title 1</h3>
+                <p>Brief description of the project and technologies used.</p>
+                <a href="#" class="btn">Live Demo</a>
+                <a href="#" class="btn">GitHub</a>
+            </div>
+            <div class="project-card">
+                <img src="/Images/frball2.jpeg" alt="Project Image">
+                <h3>Project Title 2</h3>
+                <p>Brief description of the project and technologies used.</p>
+                <a href="#" class="btn">Live Demo</a>
+                <a href="#" class="btn">GitHub</a>
+            </div>
         </div>
     </section>
 
