--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="Responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body onclick="createDot(event)">
@@ -43,33 +42,11 @@
         <h2>My Projects</h2></br>
         <div class="project-cards">
             <div class="project-card">
-                <img src="/Images/frball.jpeg" alt="Project Image">
+                <img src="https://placehold.co/600x400/png" alt="Project Image">
                 <h3>Project Title 1</h3>
                 <p>Brief description of the project and technologies used.</p>
                 <a href="#" class="btn">Live Demo</a>
                 <a href="#" class="btn">GitHub</a>
-            </div>
-            <div class="project-card">
-                <img src="/Images/frball2.jpeg" alt="Project Image">
-                <h3>Project Title 2</h3>
-                <p>Brief description of the project and technologies used.</p>
-                <a href="#" class="btn">Live Demo</a>
-                <a href="#" class="btn">GitHub</a>
-            </div>
-             <div class="project-card">
-                <img src="/Images/frball.jpeg" alt="Project Image">
-                <h3>Project Title 1</h3>
-                <p>Brief description of the project and technologies used.</p>
-                <a href="#" class="btn">Live Demo</a>
-                <a href="#" class="btn">GitHub</a>
-            </div>
-            <div class="project-card">
-                <img src="/Images/frball2.jpeg" alt="Project Image">
-                <h3>Project Title 2</h3>
-                <p>Brief description of the project and technologies used.</p>
-                <a href="#" class="btn">Live Demo</a>
-                <a href="#" class="btn">GitHub</a>
-            </div>
         </div>
     </section>
 
@@ -103,7 +80,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="/Images/me.jpg" alt="Profile Picture" class="profile-picture">
+            <img src="https://placehold.co/400" alt="Profile Picture" class="profile-picture">
             <h1 class="nameim">Imam Hasan</h1>
             <div class="bio">
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
@@ -132,7 +109,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <form action="#" method="post" class="contact-form">
+        <form action="https://formspree.io/f/xyzywkaw" method="post" class="contact-form">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name" placeholder="Your Name" required>
@@ -151,6 +128,7 @@
             </div>
             <button type="submit" class="btn">Send Message</button>
         </form>
+        
         <div class="contact-info">
             <a href="tel:+8801775-488063"><i class="fas fa-phone"></i> +8801775-488063</a>
             <a href="tel:+8801603-27939"><i class="fas fa-phone"></i> +8801603-27939</a>
