--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!-- Skills Section -->
     <section id="skills">
-        <h2>Skills</h2><br><br>
+        <h2>Skills</h2>
         <h3>Frontend Skills</h3><br>
         <ul class="skills-list">
             <li><i class="fab fa-html5"></i> HTML(√)</li>
