--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Hasan's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="Responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <header>
         <nav>
-            <h1 class="logo">My Portfolio</h1>
+            <h1 class="logo">Imam Hasan</h1>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -30,9 +30,9 @@
             <p>Passionate about creating stunning web experiences.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="/test.html" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.github.com/123imamhasan/" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://twitter.com" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://facebook.com" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61569637807562" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
     </section>
@@ -42,9 +42,9 @@
         <h2>My Projects</h2></br>
         <div class="project-cards">
             <div class="project-card">
-                <img src="https://placehold.co/600x400/png" alt="Project Image">
-                <h3>Project Title 1</h3>
-                <p>Brief description of the project and technologies used.</p>
+                <img src="/images/Mngapp.jpg" alt="Project Image">
+                <h3>01 Expense Management App</h3>
+                <p>This app will help you in your daily Expense Management</p>
                 <a href="#" class="btn">Live Demo</a>
                 <a href="#" class="btn">GitHub</a>
         </div>
@@ -72,7 +72,7 @@
         <h3>Tools</h3><br>
         <ul class="skills-list">
             <li><i class="fab fa-git-alt"></i> Git(√)</li>
-            <li><i class="fab fa-github"></i> GitHub</li>
+            <li><i class="fab fa-github"></i> GitHub(√)</li>
         </ul>
     </section>
 
@@ -80,7 +80,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="https://placehold.co/400" alt="Profile Picture" class="profile-picture">
+            <img src="/images/me.jpg" alt="Profile Picture" class="profile-picture">
             <h1 class="nameim">Imam Hasan</h1>
             <div class="bio">
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
