--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasan's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="styles.css">
+
     <link rel="stylesheet" href="Responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -95,13 +97,13 @@
         <div class="education-cards">
             <div class="card">
                 <h3>Master of Science in Computer Science</h3>
-                <p>XYZ University, 2022 - 2024</p>
+                <p></p>
                 <p>Graduated with Honors</p>
             </div>
             <div class="card">
                 <h3>Bachelor of Science in Information Technology</h3>
-                <p>ABC College, 2018 - 2022</p>
-                <p>Dean's List, 2020</p>
+                <p></p>
+                <p></p>
             </div>
         </div>
     </section>
