--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasan's Portfolio</title>
-   <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="styles.css">
-
+   
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="Responsive.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body onclick="createDot(event)">
@@ -41,7 +41,7 @@
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>My Projects</h2></br>
+        <h2>My Projects</h2><br>
         <div class="project-cards">
             <div class="project-card">
                 <img src="/images/Mngapp.jpg" alt="Project Image">
@@ -50,6 +50,7 @@
                 <a href="#" class="btn">Live Demo</a>
                 <a href="#" class="btn">GitHub</a>
         </div>
+      </div>
     </section>
 
     <!-- Skills Section -->
@@ -59,7 +60,7 @@
         <ul class="skills-list">
             <li><i class="fab fa-html5"></i> HTML(√)</li>
             <li><i class="fab fa-css3-alt"></i> CSS(√)</li>
-            <li><i class="fab fa-js-square"></i> JavaScript</li>
+            <li><i class="fab fa-js-square"></i> JavaScript(√)</li>
             <li><i class="fab fa-react"></i> React</li>
             <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
             <li><i class="fab fa-sass"></i> SASS</li>
@@ -82,7 +83,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="/images/me.jpg" alt="Profile Picture" class="profile-picture">
+            <img src="/images/me.png" alt="Profile Picture" class="profile-picture">
             <h1 class="nameim">Imam Hasan</h1>
             <div class="bio">
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
@@ -96,12 +97,14 @@
         <h2>Education</h2><br>
         <div class="education-cards">
             <div class="card">
-                <h3>Master of Science in Computer Science</h3>
+                <h3>Higher School certificate (HSC)</h3>
+                <h5>Alamgir Monsur (Mintu) Memorial College. Passing Year: 2024. GPA: 4.67</h5>
                 <p></p>
-                <p>Graduated with Honors</p>
+                <p></p>
             </div>
             <div class="card">
-                <h3>Bachelor of Science in Information Technology</h3>
+                <h3>Secondary School certificate (SSC)</h3>
+                <h5>Shyamgonj High School. Passing Year: 2022. GPA: 5.00</h5>
                 <p></p>
                 <p></p>
             </div>
@@ -139,7 +142,7 @@
     </section>
 
     <footer>
-        <p>&copy;2024 Imam Hasan</p>
+        <p>&copy;2024 Imam Hasan. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
