--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="/images/me.png" alt="Profile Picture" class="profile-picture">
+            <img src="/images/me.jpg" alt="Profile Picture" class="profile-picture">
             <h1 class="nameim">Imam Hasan</h1>
             <div class="bio">
                 <p>I'm a dedicated web developer with a passion for creating interactive, user-friendly web applications. With a background in both front-end and back-end development, I strive to build scalable and efficient solutions.</p>
